hphp/test/slow/php7_backported/scalar-types/scalar_strict_declaration_placement_001.php.expectf

Fatal error: An expression is expected here. in %s/scalar_strict_declaration_placement_001.php on line 14
